tests/errors/invalid_hex_escape1.pyx
# mode: error

'\x1'

_ERRORS = '''
3:1: Invalid hex escape '\x'
'''
